terminado la parte de feedback (CRUD listo)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,6 +24,144 @@ button:active {
 }
 
 /* ---------------------------------------
+--  form personalizado
+------------------------------------------ */
+.personalized-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 25px;
+  background-color: #171717;
+  border-radius: 25px;
+  transition: 0.4s;
+}
+
+.personalized-form h2 {
+  text-align: center;
+  margin: 2em;
+  color: rgb(255, 255, 255);
+  font-size: 1.2em;
+}
+
+.personalized-field {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  border-radius: 25px;
+  padding: 0.6em;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: #171717;
+  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+}
+
+.personalized-input-icon {
+  height: 1.3em;
+  width: 1.3em;
+  fill: white;
+}
+
+.personalized-input-field {
+  background: none;
+  border: none;
+  outline: none;
+  width: 100%;
+  color: #d3d3d3;
+}
+
+/* ---------------------------------------
+--  para los botones
+------------------------------------------ */
+
+.personalized-btn-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  max-width: 500px;
+  margin: 1.5em auto 1.5em auto; /* top right bottom left */
+}
+
+.personalized-button-create {
+  padding: 10px;
+  border-radius: 5px;
+  margin: auto;
+  border: none;
+  background-color: blue;
+  color: white;
+  max-width: 40%;
+  width: 100px;
+}
+
+.personalized-button-create:hover {
+  background-color: rgb(20, 20, 211);
+  color: black;
+}
+
+.personalized-button-edit {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #28880b;
+  color: white;
+  max-width: 40%;
+  width: 100px;
+  margin: auto;
+}
+
+.personalized-button-edit:hover {
+  background-color: #3dc414;
+  color: black;
+}
+
+.personalized-button-delete {
+  padding: 10px;
+  border-radius: 5px;
+  margin: auto;
+  border: none;
+  background-color: red;
+  color: white;
+  max-width: 50%;
+  width: 200px;
+}
+
+.personalized-button-delete:hover {
+  background-color: rgb(209, 10, 10);
+  color: black;
+}
+
+/* ---------------------------------------
+--  para poner las cartas se usan en el form 
+------------------------------------------ */
+
+.personalized-card {
+  background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+  border-radius: 20px;
+  transition: all 0.3s;
+  max-width: 90%;
+  margin: auto;
+}
+
+.personalized-card2 {
+  border-radius: 0;
+}
+
+.personalized-card2:hover {
+  padding: 5px;
+}
+
+.personalized-card:hover {
+  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.3);
+}
+
+@media (max-width: 500px) {
+  .personalized-card {
+    max-width: 99%;
+  }
+}
+
+/* ---------------------------------------
 --  para poner las alertas en la parte superior
 ------------------------------------------ */
 .alerts-position-top {
@@ -37,6 +175,14 @@ button:active {
   justify-content: center;
   z-index: 1000;
   margin: auto;
+}
+
+/* ---------------------------------------
+--  para cambiar el modal Style
+------------------------------------------ */
+.custom-modal {
+  background-color: #171717;
+  color: white;
 }
 
 /* ---------------------------------------
