--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,6 +35,9 @@ button:active {
   border-radius: 25px;
   transition: 0.4s;
 }
+.personalized-form textarea {
+  height: 100px;
+}
 
 .personalized-form h2 {
   text-align: center;
